--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,14 @@
-MYSQL_DATABASE=wp_db
-MYSQL_USER=admin
-MYSQL_PASSWORD=password
+# MYSQL SETUP
+MYSQL_ROOT_PASSWORD=12345
+MYSQL_DATABASE=wp
+MYSQL_USER=cjothos
+MYSQL_PASSWORD=12345
+TZ=Europe/Moscow
+#WP_SETUP
+WORDPRESS_WEBSITE_URL_WITHOUT_HTTP=cjothos.42.fr
+WORDPRESS_WEBSITE_TITLE=CjothosSite
+WORDPRESS_ADMIN_USER=cjothos
+WORDPRESS_ADMIN_PASSWORD=12345
+WORDPRESS_ADMIN_EMAIL=cjothos@42.fr
+
+
