--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,8 +1,10 @@
 FROM debian:buster
+
 RUN apt-get update
-RUN apt-get install mariadb-server -y
-COPY ./50-server.cnf /etc/mysql/mariadb.conf.d/
-COPY ./createdb.sql /
-RUN service mysql start && mysql < createdb.sql
-RUN rm -f createdb.sql
-CMD /usr/bin/mysqld_safe
+RUN apt-get -y upgrade
+RUN apt-get install -y default-mysql-server procps
+EXPOSE 3306
+COPY /tools/db.sh /var/www/db.sh
+RUN chmod +x /var/www/db.sh
+ENTRYPOINT ["/var/www/db.sh"]
+CMD ["mysql"]
