--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,36 +1,26 @@
-events {
-	worker_connections 768;
-}
+server
+{
+	listen 						443 ssl;
+	listen 						[::]:443 ssl;
+	server_name					cjothos.42.fr;
+	include  					/etc/nginx/mime.types;
+	ssl							on;
+	add_header					Strict-Transport-Security "max-age=31536000";
+	ssl_ciphers					TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-128-GCM-SHA256:TLS13-AES-256-GCM-SHA384:ECDHE:!COMPLEMENTOFDEFAULT;
+	ssl_prefer_server_ciphers 	on;
+	ssl_protocols				TLSv1.2 TLSv1.3;
 
-http {
-		upstream wordpress_server {
-			server wordpress_service:9000;
-		}
+	root						/var/www/html/;
+	index						index.php;
 
-		server {
-			listen 443 ssl;
-			listen [::]:443 ssl;
-			server_name cjothos.42.fr;
-			include  /etc/nginx/mime.types;
+	location / {
+		autoindex				on
+		autoindex_format		html;
+		try_files				$uri $uri/ = 404;
+	}
 
-			root /var/www/wordpress/;
-			index index.php index.html index.htm;
-
-			ssl_protocols TLSv1.2;
-			ssl_certificate /etc/ssl/certs/cjothos.crt;
-			ssl_certificate_key /etc/ssl/private/cjothos.key;
-
-			location / {
-				try_files $uri $uri/ =404;
-			}
-
-		location ~ \.php$ {
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass wordpress_server;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-         }
-    }
+	location ~ \.php$ {
+		include 				snippets/fastcgi-php.conf;
+		fastcgi_pass			wordpress:9000;
+	}
 }
