--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,29 @@
-# MYSQL SETUP
+# domain
+DOMAIN_NAME=cjothos.42.fr
+
+# mysql setup
+MYSQL_HOST=mariadb
 MYSQL_ROOT_PASSWORD=12345
-MYSQL_DATABASE=wp
 MYSQL_USER=cjothos
 MYSQL_PASSWORD=12345
-TZ=Europe/Moscow
-#WP_SETUP
-WORDPRESS_WEBSITE_URL_WITHOUT_HTTP=cjothos.42.fr
-WORDPRESS_WEBSITE_TITLE=CjothosSite
-WORDPRESS_ADMIN_USER=cjothos
-WORDPRESS_ADMIN_PASSWORD=12345
-WORDPRESS_ADMIN_EMAIL=cjothos@42.fr
 
+# wordpress
+WP_DB_NAME=wordpress
+WP_DB_USER=cjothos
+WP_DB_PASSWORD=12345
+WP_TITLE=inception
+WP_ADMIN_USER=cjothos1
+WP_ADMIN_PASSWORD=12345
+WP_ADMIN_EMAIL=me@cjothos.com
+WP_USER=cjothos2
+WP_PASSWORD=12345
+WP_EMAIL=cjothos@42.com
+WP_FILE_ONINSTALL=wp_install_done
 
+# redis
+REDIS_HOST=redis
+REDIS_PASSWORD=12345
+
+# ftp
+FTP_USER=petr
+FTP_PASSWORD=12345
